force-app/main/default/objects/Person_Incomes__c/Person_Incomes__c.object-meta.xml
<CustomObject>
    <label>Person Income</label>
    <nameField>
        <displayFormat>PIS-{0000000}</displayFormat>
        <label>Person Income Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Person Incomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>