force-app/main/default/objects/Person_Incomes__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Person Incomes</relationshipLabel>
    <relationshipName>Person_Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>