force-app/main/default/objects/Person_Incomes__c/fields/Disregrad__c.field-meta.xml
<CustomField>
    <fullName>Disregrad__c</fullName>
    <label>Disregard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>