force-app/main/default/objects/Person_Incomes__c/fields/Income_Source__c.field-meta.xml
<CustomField>
    <fullName>Income_Source__c</fullName>
    <label>Income Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child Support</fullName>
            </value>
            <value>
                <fullName>Deemed Income</fullName>
            </value>
            <value>
                <fullName>Federal Grants/Loans</fullName>
            </value>
            <value>
                <fullName>Grants/Loans Non-Federal</fullName>
            </value>
            <value>
                <fullName>Income From Sale of Property</fullName>
            </value>
            <value>
                <fullName>IV-E Payments</fullName>
            </value>
            <value>
                <fullName>Net Rental Income</fullName>
            </value>
            <value>
                <fullName>None - Earned</fullName>
            </value>
            <value>
                <fullName>None- Unearned</fullName>
            </value>
            <value>
                <fullName>Other - Earned</fullName>
            </value>
            <value>
                <fullName>Other-Unearned</fullName>
            </value>
            <value>
                <fullName>Pension</fullName>
            </value>
            <value>
                <fullName>Railroad Retirement Benefits</fullName>
            </value>
            <value>
                <fullName>Regular Cash Contribution</fullName>
            </value>
            <value>
                <fullName>Self Employment Earning</fullName>
            </value>
            <value>
                <fullName>Sick Leave Benefits</fullName>
            </value>
            <value>
                <fullName>Social Security Disability Insurance</fullName>
            </value>
            <value>
                <fullName>Social Security Retirement</fullName>
            </value>
            <value>
                <fullName>Social Security Survivors (Benefits)</fullName>
            </value>
            <value>
                <fullName>SSI/Supplemental Security Income</fullName>
            </value>
            <value>
                <fullName>Student Income</fullName>
            </value>
            <value>
                <fullName>TANF</fullName>
            </value>
            <value>
                <fullName>Tips</fullName>
            </value>
            <value>
                <fullName>Title XIX-Medicaid</fullName>
            </value>
            <value>
                <fullName>Unemployment Compensation</fullName>
            </value>
            <value>
                <fullName>Veteran Benefits</fullName>
            </value>
            <value>
                <fullName>Wages or Salary</fullName>
            </value>
            <value>
                <fullName>WIC Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>