force-app/main/default/objects/Person_Incomes__c/fields/Income_Summary__c.field-meta.xml
<CustomField>
    <fullName>Income_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Income Summary</label>
    <referenceTo>Income_Summary__c</referenceTo>
    <relationshipName>Person_Income_Summarys</relationshipName>
    <type>Lookup</type>
</CustomField>