force-app/main/default/objects/Person_Incomes__c/fields/Income_Type__c.field-meta.xml
<CustomField>
    <fullName>Income_Type__c</fullName>
    <label>Income Type</label>
    <length>225</length>
    <type>Text</type>
</CustomField>