force-app/main/default/objects/Person_Incomes__c/fields/Verification__c.field-meta.xml
<CustomField>
    <fullName>Verification__c</fullName>
    <label>Verification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Benefits Statement</fullName>
            </value>
            <value>
                <fullName>CARES Not Verified</fullName>
            </value>
            <value>
                <fullName>CARES Verified - Other</fullName>
            </value>
            <value>
                <fullName>Client Reported</fullName>
            </value>
            <value>
                <fullName>CSEA (Child Support)</fullName>
            </value>
            <value>
                <fullName>Federal Tax Form</fullName>
            </value>
            <value>
                <fullName>Lease/ Rental Agreement</fullName>
            </value>
            <value>
                <fullName>MD Automated Benefit System (MABS)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pay Stub</fullName>
            </value>
            <value>
                <fullName>Receipt Book</fullName>
            </value>
            <value>
                <fullName>Rental Receipts</fullName>
            </value>
            <value>
                <fullName>SVES Verified</fullName>
            </value>
            <value>
                <fullName>Unable to Verify Income</fullName>
            </value>
            <value>
                <fullName>W-2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>